--- a/ClassesAlgorithme/ClassesAlgorithme/ClassesAlgorithm.csproj
+++ b/ClassesAlgorithme/ClassesAlgorithme/ClassesAlgorithm.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Execution.cs" />
     <Compile Include="Operations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Time.cs" />
     <Compile Include="TimeSlot.cs" />
     <Compile Include="WeekDays.cs" />
   </ItemGroup>
