--- a/web/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/web/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -107,13 +107,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\1-col-portfolio.css" />
-    <Content Include="Content\angular-slider.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\Bootstrap.FontAwsome.css" />
     <Content Include="Content\Bootstrap.FontAwsome.min.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\rzslider.min.css" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="HtmlPage.html" />
@@ -122,7 +122,6 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="scripts\angular-slider.js" />
     <Content Include="scripts\angular.min.js.map" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -164,6 +163,7 @@
     <Content Include="scripts\ngConstellation-1.8.0.js" />
     <Content Include="scripts\ng_algorithme.js" />
     <Content Include="scripts\npm.js" />
+    <Content Include="scripts\rzslider.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
