--- a/backend/AlgorithmePackage/AlgorithmePackage/AlgorithmePackage.csproj
+++ b/backend/AlgorithmePackage/AlgorithmePackage/AlgorithmePackage.csproj
@@ -78,7 +78,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties PublishMethod="ConstellationServer" PublishServer="http://localhost:8088" />
+      <UserProperties PublishServer="http://localhost:8088" PublishMethod="ConstellationServer" />
     </VisualStudio>
   </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
