minor fixe on backend and web end : slider + inputs embeded added

--- a/web/WebApplication1/WebApplication1/AppAlgo.csproj
+++ b/web/WebApplication1/WebApplication1/AppAlgo.csproj
@@ -107,6 +107,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\1-col-portfolio.css" />
+    <Content Include="Content\angular.rangeSlider.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -115,7 +116,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="HtmlPage.html" />
+    <Content Include="algorithme.html" />
     <Content Include="index.html" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
@@ -147,6 +148,7 @@
     <Content Include="scripts\angular-mocks.js" />
     <Content Include="scripts\angular.js" />
     <Content Include="scripts\angular.min.js" />
+    <Content Include="scripts\angular.rangeSlider.js" />
     <Content Include="scripts\bootstrap.js" />
     <Content Include="scripts\bootstrap.min.js" />
     <Content Include="scripts\Constellation-1.8.0.js" />
@@ -162,6 +164,7 @@
     <Content Include="scripts\ngConstellation-1.8.0.js" />
     <Content Include="scripts\ng_algorithme.js" />
     <Content Include="scripts\npm.js" />
+    <Content Include="test.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
